mercure-web/src/app/components/landing/landing.component.scss
@use '/src/styles/variables.scss' as vars;

.landing-container {
    display: flex;
    justify-content: center;
    vertical-align: middle;
    align-items: center;
    text-align: center;
    width: 100%;
    height: 100%;
    padding: 15px;
    border-radius: 15px;
    color: vars.$bole;
    #title-container {
        border-radius: 5%;
        .app-title {
            font-size: 88px;
            letter-spacing: 20px;
        }
        .app-subtitle {
            font-size: 28px;
        }
    }
    #auth-container {
        height: 102px;
        display: flex;
        align-items: center;
        flex-direction: column;
        justify-content: space-between;
        margin: 15px;
        .auth-button {
            width: 100%;
            height: 42px;
            margin: 10px;
            color: vars.$lemon-chiffon;
            text-decoration: none;
            vertical-align: middle;
            font-size: 18px;
            border-style: none;
            border-radius: 5px;
            background-color: vars.$dark-moss-green;
            &:active {
                transform: scale(0.95);
                background-color: darken(vars.$bole, 7%);
            }
            &:disabled {
                background-color: darken(vars.$bole, 7%);
            }
            fa-icon {
                font-size: 24px;
            }
        }
    }
}

